styled(pt.4): table

--- a/src/app/components/table/table-with-sorting/table-with-sorting.component.scss
+++ b/src/app/components/table/table-with-sorting/table-with-sorting.component.scss
@@ -13,9 +13,8 @@ mat-card {
 mat-card-header{
   display: inline-block;
   text-align: center;
-  padding-bottom: 1rem;
+  padding: 1.5rem;
 };
-
 table {
     width: 100%;
   }
