--- a/src/app/components/table/adding-removing-data-observable-based-datasource/adding-removing-data-observable-based-datasource.component.scss
+++ b/src/app/components/table/adding-removing-data-observable-based-datasource/adding-removing-data-observable-based-datasource.component.scss
@@ -1,21 +1,21 @@
 mat-grid-tile{
-    overflow: visible;
-  }
-  
-  mat-card {
-    height: stretch;
-    width: stretch;
-    padding-bottom: 5rem;
-    margin-bottom: 1rem;
-    margin-top: 2rem;
-  }
-  
-  mat-card-header{
-    display: inline-block;
-    text-align: center;
-    padding-bottom: 1rem;
-  };
-  
+  overflow: visible;
+}
+
+mat-card {
+  height: stretch;
+  width: stretch;
+  padding-bottom: 5rem;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+}
+
+mat-card-header{
+  display: inline-block;
+  text-align: center;
+  padding: 1.5rem;
+};
+
   .demo-table {
     width: 100%;
   }
