--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -13,10 +13,6 @@ a {
 }
 
 
-h3{
-    font-weight: 500;
-}
-
 h4{
  margin: 0 auto;
 }
@@ -33,6 +29,7 @@ mat-list-item{
     width: 100%;
     height: 100%;
     padding-left: 1.5rem;
+    padding-top: 1rem;
 }
 
 .mdc-button{
@@ -45,10 +42,15 @@ mat-nav-list {
     justify-content: center;
 
     & .mdc-button {
+        font-weight: 400;
+        color: black;
         justify-content:center;
     }
 } 
 
+mat-expansion-panel-header h3{
+    padding-top: 1rem;
+}
 .mdc-list {
     padding: 0;
 }
