--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -89,6 +89,15 @@
             <mat-list-item>
                 <button mat-button class="navButton" (click)="showElement('dialog')"><h3>Dialog</h3></button>
             </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('toolbar')"><h3>Toolbar</h3></button>
+            </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('tooltip')"><h3>Tooltip</h3></button>
+            </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('tree')"><h3>Tree</h3></button>
+            </mat-list-item>
 
             <!-- 
             <mat-list-item>
@@ -101,8 +110,10 @@
     </mat-sidenav>
   
     <mat-sidenav-content >
-      <div *ngIf="!element">Show this while nothing is chosen</div>
-      <ng-container *ngComponentOutlet="(element)" ></ng-container>
+      <!-- <div *ngIf="!element">Show this while nothing is chosen</div>
+      <ng-container *ngComponentOutlet="(element)" ></ng-container> -->
+
+<app-tree></app-tree>
 
     </mat-sidenav-content>
   
