--- a/src/app/components/tree/tree.component.html
+++ b/src/app/components/tree/tree.component.html
@@ -1,1 +1,267 @@
-<p>tree works!</p>
+
+<mat-grid-list cols="6" rowHeight="120rem" role="list" >
+
+    <mat-grid-tile colspan="1" ></mat-grid-tile>
+
+    <mat-grid-tile role="listitem" colspan="2" >
+        <mat-card>
+
+            <tree-checklist-example></tree-checklist-example>
+
+            <mat-divider></mat-divider>
+
+            <tree-dynamic-example></tree-dynamic-example>
+
+            <mat-divider></mat-divider>
+
+            <tree-flat-overview-example></tree-flat-overview-example>
+
+            <mat-divider></mat-divider>
+
+            <tree-loadmore-example></tree-loadmore-example>
+
+            <mat-divider></mat-divider>
+
+            <tree-nested-overview-example></tree-nested-overview-example>
+
+
+      </mat-card>
+   </mat-grid-tile>
+
+   <mat-grid-tile role="listitem" colspan="2">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Tree with checkboxes</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content>
+
+            <mat-accordion>
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            See source code + explanation
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+                        <mat-tab label="HTML">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="treeChecklistExampleHTML" [options]="{
+                                    lineNumbers: true,
+                                    theme: 'material',
+                                    mode: 'markdown'
+                                    }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="TS">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="treeChecklistExampleTS" [options]="{
+                                    lineNumbers: true,
+                                    theme: 'material',
+                                    mode: 'markdown'
+                                    }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="Explanations template">
+                            <ng-template matTabContent>
+                                please write
+                            </ng-template>
+                        </mat-tab>
+                    </mat-tab-group>
+                </mat-expansion-panel>
+            </mat-accordion>
+        </mat-card-content>
+
+        <mat-divider></mat-divider>
+
+        <mat-card-header>
+            <mat-card-title>Tree with dynamic data</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content>
+
+            <mat-accordion>
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            See source code + explanation
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+                        <mat-tab label="HTML">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="TreeWithDynamicDataHTML" [options]="{
+                                    lineNumbers: true,
+                                    theme: 'material',
+                                    mode: 'markdown'
+                                    }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="TS">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="TreeWithDynamicDataTS" [options]="{
+                                        lineNumbers: true,
+                                        theme: 'material',
+                                        mode: 'markdown'
+                                        }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="Explanations template">
+                            <ng-template matTabContent>
+                                please write
+                            </ng-template>
+                        </mat-tab>
+                    </mat-tab-group>
+                </mat-expansion-panel>
+            </mat-accordion>
+        </mat-card-content>
+
+        <mat-divider></mat-divider>
+
+        <mat-card-header>
+            <mat-card-title>Tree with flat nodes</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content>
+
+            <mat-accordion>
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            See source code + explanation
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+                        <mat-tab label="HTML">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="TreeWithFlatNodesHTML" [options]="{
+                                        lineNumbers: true,
+                                        theme: 'material',
+                                        mode: 'markdown'
+                                        }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="TS">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="TreeWithFlatNodesTS" [options]="{
+                                        lineNumbers: true,
+                                        theme: 'material',
+                                        mode: 'markdown'
+                                        }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="Explanations template">
+                            <ng-template matTabContent>
+                                please write
+                            </ng-template>
+                        </mat-tab>
+                    </mat-tab-group>
+                </mat-expansion-panel>
+            </mat-accordion>
+        </mat-card-content>
+
+        <mat-divider></mat-divider>
+
+        <mat-card-header>
+            <mat-card-title>Tree with partially loaded data</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content>
+
+            <mat-accordion>
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            See source code + explanation
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+                        <mat-tab label="HTML">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="TreeWithPartiallyLoadedDataHTML" [options]="{
+                                        lineNumbers: true,
+                                        theme: 'material',
+                                        mode: 'markdown'
+                                        }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="TS">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="TreeWithPartiallyLoadedDataTS" [options]="{
+                                            lineNumbers: true,
+                                            theme: 'material',
+                                            mode: 'markdown'
+                                            }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="Explanations template">
+                            <ng-template matTabContent>
+                                please write
+                            </ng-template>
+                        </mat-tab>
+                    </mat-tab-group>
+                </mat-expansion-panel>
+            </mat-accordion>
+        </mat-card-content>
+
+        <mat-divider></mat-divider>
+
+        <mat-card-header>
+            <mat-card-title>Tree with nested nodes</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content>
+
+            <mat-accordion>
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            See source code + explanation
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+                        <mat-tab label="HTML">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="TreeWithNestedNodesHTML" [options]="{
+                                            lineNumbers: true,
+                                            theme: 'material',
+                                            mode: 'markdown'
+                                            }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="TS">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="TreeWithNestedNodesTS" [options]="{
+                                            lineNumbers: true,
+                                            theme: 'material',
+                                            mode: 'markdown'
+                                            }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="CSS">
+                            <ng-template matTabContent>
+                                <ngx-codemirror [(ngModel)]="TreeWithNestedNodesCSS" [options]="{
+                                            lineNumbers: true,
+                                            theme: 'material',
+                                            mode: 'markdown'
+                                            }"></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="Explanations template">
+                            <ng-template matTabContent>
+                                please write
+                            </ng-template>
+                        </mat-tab>
+                    </mat-tab-group>
+                </mat-expansion-panel>
+            </mat-accordion>
+        </mat-card-content>
+  
+
+  </mat-card>
+</mat-grid-tile>
+
+
+   <mat-grid-tile colspan="1" ></mat-grid-tile>
+
+</mat-grid-list>
