--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -110,10 +110,10 @@
     </mat-sidenav>
   
     <mat-sidenav-content >
-      <!-- <div *ngIf="!element">Show this while nothing is chosen</div>
-      <ng-container *ngComponentOutlet="(element)" ></ng-container> -->
+      <div *ngIf="!element">Show this while nothing is chosen</div>
+      <ng-container *ngComponentOutlet="(element)" ></ng-container>
 
-<app-tree></app-tree>
+
 
     </mat-sidenav-content>
   
