--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -12,9 +12,12 @@ a {
     text-decoration: none;
 }
 
+h4 {
+    margin: 0 auto;
+}
 
-h4{
- margin: 0 auto;
+.menu{
+    position: absolute;
 }
 
 mat-list{
